dataset1235/2025-2/1153765216/users/230013788/executions/2747719322_3455942218.log
== SUBMISSION (2025-08-26 17:13:22)
-- CODE: 
# Leitura das entradas e conversao para float:
vu = float(input("Qual o valor unitario do jogo? "))
va = float(input("Qual o valor disponivel para a aquisicao dos jogos? "))

????? = f???t(input("Qual o valor unitario do jogo? "))
????? = f???t(input("Qual o valor diposnivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
total = (vu*8 )+ 45.00
saldo = va - total 

# Impressao do valor total e do saldo:
print(round(total , 2))
print(round(saldo , 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 5
    ????? = f???t(input("Qual o valor unitario do jogo? "))
    ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 5
    ????? = f???t(input("Qual o valor unitario do jogo? "))
    ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 5
    ????? = f???t(input("Qual o valor unitario do jogo? "))
    ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 5
    ????? = f???t(input("Qual o valor unitario do jogo? "))
    ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 5
    ????? = f???t(input("Qual o valor unitario do jogo? "))
    ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 5
    ????? = f???t(input("Qual o valor unitario do jogo? "))
    ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 17:14:08)
-- CODE: 
# Leitura das entradas e conversao para float:
vu = float(input("Qual o valor unitario do jogo? "))
va = float(input("Qual o valor disponivel para a aquisicao dos jogos? "))

????? = f???t(input("Qual o valor unitario do jogo? "))
????? = f???t(input("Qual o valor diposnivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
total = (vu*8 )+ 45.00
saldo = va - total 

# Impressao do valor total e do saldo:
print(round(total , 2))
print(round(saldo , 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 5
    ????? = f???t(input("Qual o valor unitario do jogo? "))
    ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 5
    ????? = f???t(input("Qual o valor unitario do jogo? "))
    ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 5
    ????? = f???t(input("Qual o valor unitario do jogo? "))
    ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 5
    ????? = f???t(input("Qual o valor unitario do jogo? "))
    ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 5
    ????? = f???t(input("Qual o valor unitario do jogo? "))
    ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 5
    ????? = f???t(input("Qual o valor unitario do jogo? "))
    ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 17:13:23)
-- CODE: 
# Leitura das entradas e conversao para float:
vu = float(input("Qual o valor unitario do jogo? "))
va = float(input("Qual o valor disponivel para a aquisicao dos jogos? "))

????? = f???t(input("Qual o valor unitario do jogo? "))
????? = f???t(input("Qual o valor diposnivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
total = (vu*8 )+ 45.00
saldo = va - total 

# Impressao do valor total e do saldo:
print(round(total , 2))
print(round(saldo , 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 5
    ????? = f???t(input("Qual o valor unitario do jogo? "))
    ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 5
    ????? = f???t(input("Qual o valor unitario do jogo? "))
    ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 5
    ????? = f???t(input("Qual o valor unitario do jogo? "))
    ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 5
    ????? = f???t(input("Qual o valor unitario do jogo? "))
    ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 5
    ????? = f???t(input("Qual o valor unitario do jogo? "))
    ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 5
    ????? = f???t(input("Qual o valor unitario do jogo? "))
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 17:15:36)
-- CODE: 
# Leitura das entradas e conversao para float:
vu = float(input("Qual o valor unitario do jogo? "))
va = float(input("Qual o valor disponivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
total = (vu*8 )+ 45.00
saldo = va - total 

# Impressao do valor total e do saldo:
print(round(total , 2))
print(round(saldo , 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
---- user output:
55.0
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
---- user output:
1.0
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
---- user output:
1307.0
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
---- user output:
8059.0
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
---- user output:
15.4
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
---- user output:
195.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 17:14:06)
-- CODE: 

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
---- user output:
None
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
---- user output:
None
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
---- user output:
None
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
---- user output:
None
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
---- user output:
None
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
